[platform] updating `ConfigImportHelper` and the surroundings (IJPL-198038 preparation)
Pure NIO (most tests are now using the in-memory FS); no more deprecated code; leaner API; typos; formatting.

GitOrigin-RevId: e97f7088100ecf191b653202753b320f9bdab12a