@@ -1,7 +1,8 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.application;
 
 import com.intellij.ide.BootstrapBundle;
+import com.intellij.ide.actions.ImportSettingsFilenameFilter;
 import com.intellij.openapi.MnemonicHelper;
 import com.intellij.openapi.fileChooser.FileChooserDescriptorFactory;
 import com.intellij.openapi.fileChooser.impl.FileChooserFactoryImpl;
@@ -10,26 +11,23 @@ import com.intellij.openapi.ui.TextFieldWithBrowseButton;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.local.CoreLocalFileSystem;
 import com.intellij.openapi.vfs.local.CoreLocalVirtualFile;
 import com.intellij.ui.CollectionComboBoxModel;
 import com.intellij.ui.ComponentUtil;
+import com.intellij.util.system.OS;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import javax.swing.filechooser.FileNameExtensionFilter;
 import java.awt.*;
-import java.io.File;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Enumeration;
 import java.util.List;
 import java.util.function.Function;
+import java.util.zip.ZipFile;
 
 final class ImportOldConfigsPanel extends JDialog {
   private JPanel myRootPanel;
@@ -41,12 +39,12 @@ final class ImportOldConfigsPanel extends JDialog {
   private ComboBox<Path> myComboBoxOldPaths;
 
   private final List<Path> myGuessedOldConfigDirs;
-  private final Function<? super Path, ? extends Pair<Path, Path>> myValidator;
+  private final Function<Path, Pair<Path, Path>> myValidator;
   private final String myProductName;
   private Path myLastSelection = null;
   private Pair<Path, Path> myResult;
 
-  ImportOldConfigsPanel(List<Path> guessedOldConfigDirs, Function<? super Path, ? extends Pair<Path, Path>> validator) {
+  ImportOldConfigsPanel(@NotNull List<Path> guessedOldConfigDirs, @NotNull Function<Path, Pair<Path, Path>> validator) {
     super((Dialog)null, true);
 
     ComponentUtil.decorateWindowHeader(rootPane);
@@ -61,7 +59,7 @@ final class ImportOldConfigsPanel extends JDialog {
   private void init() {
     MnemonicHelper.init(getContentPane());
 
-    ButtonGroup group = new ButtonGroup();
+    var group = new ButtonGroup();
     group.add(myRbImportAuto);
     group.add(myRbImport);
     group.add(myRbDoNotImport);
@@ -73,51 +71,53 @@ final class ImportOldConfigsPanel extends JDialog {
     }
     else {
       myComboBoxOldPaths.setModel(new CollectionComboBoxModel<>(myGuessedOldConfigDirs));
-      myComboBoxOldPaths.setSelectedItem(myGuessedOldConfigDirs.get(0));
+      myComboBoxOldPaths.setSelectedItem(myGuessedOldConfigDirs.getFirst());
       myRbImportAuto.setSelected(true);
     }
-    for (Enumeration<AbstractButton> e = group.getElements(); e.hasMoreElements(); ) {
+    for (var e = group.getElements(); e.hasMoreElements(); ) {
       e.nextElement().addChangeListener(event -> update());
     }
-    if (SystemInfo.isMac) {
-      myLastSelection = Paths.get("/Applications");
+    if (OS.CURRENT == OS.macOS) {
+      myLastSelection = Path.of("/Applications");
     }
-    else if (SystemInfo.isWindows) {
-      String programFiles = System.getenv("ProgramFiles");
+    else if (OS.CURRENT == OS.Windows) {
+      var programFiles = System.getenv("ProgramFiles");
       if (programFiles != null) {
-        Path candidate = Paths.get(programFiles, "JetBrains");
-        myLastSelection = Files.isDirectory(candidate) ? candidate : Paths.get(programFiles);
+        var candidate = Path.of(programFiles, "JetBrains");
+        myLastSelection = Files.isDirectory(candidate) ? candidate : Path.of(programFiles);
       }
     }
     myPrevInstallation.setTextFieldPreferredWidth(50);
     myPrevInstallation.addActionListener(e -> {
-      var chooserDescriptor = FileChooserDescriptorFactory.createSingleLocalFileDescriptor().withHideIgnored(false);
+      var chooserDescriptor = FileChooserDescriptorFactory.singleFile().withHideIgnored(false);
       ConfigImportHelper.setSettingsFilter(chooserDescriptor);
-      var fileRef = Ref.<File>create();
+      var fileRef = Ref.<Path>create();
       var chooser = FileChooserFactoryImpl.createNativePathChooserIfEnabled(chooserDescriptor, null, myRootPanel);
       if (chooser != null) {
-        VirtualFile vf = myLastSelection != null ? new CoreLocalVirtualFile(new CoreLocalFileSystem(), myLastSelection) : null;
-        chooser.choose(vf, files -> fileRef.set(new File(files.get(0).getPresentableUrl())));
+        var vf = myLastSelection != null ? new CoreLocalVirtualFile(new CoreLocalFileSystem(), myLastSelection) : null;
+        chooser.choose(vf, files -> fileRef.set(Path.of(files.getFirst().getPresentableUrl())));
       }
       else {
-        JFileChooser fc = new JFileChooser(myLastSelection != null ? myLastSelection.getParent().toFile() : null);
-        fc.setSelectedFile(myLastSelection != null ? myLastSelection.toFile() : null);
+        @SuppressWarnings("IO_FILE_USAGE") var directory = myLastSelection != null ? myLastSelection.getParent().toFile() : null;
+        @SuppressWarnings("IO_FILE_USAGE") var selectedFile = myLastSelection != null ? myLastSelection.toFile() : null;
+        var fc = new JFileChooser();
+        fc.setCurrentDirectory(directory);
+        fc.setSelectedFile(selectedFile);
         fc.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
-        fc.setFileHidingEnabled(SystemInfo.isWindows || SystemInfo.isMac);
+        fc.setFileHidingEnabled(OS.CURRENT == OS.Windows || OS.CURRENT == OS.macOS);
         fc.setFileFilter(new FileNameExtensionFilter(BootstrapBundle.message("import.settings.filter"), "zip", "jar"));
-        @SuppressWarnings("DuplicatedCode")
-        int returnVal = fc.showOpenDialog(this);
+        var returnVal = fc.showOpenDialog(this);
         if (returnVal == JFileChooser.APPROVE_OPTION) {
-          File file = fc.getSelectedFile();
+          var file = fc.getSelectedFile();
           if (file != null) {
-            fileRef.set(file);
+            fileRef.set(file.toPath());
             myPrevInstallation.setText(file.getAbsolutePath());
           }
         }
       }
       if (!fileRef.isNull()) {
-        myLastSelection = fileRef.get().toPath();
-        myPrevInstallation.setText(fileRef.get().getAbsolutePath());
+        myLastSelection = fileRef.get();
+        myPrevInstallation.setText(fileRef.get().toString());
       }
     });
 
@@ -140,29 +140,28 @@ final class ImportOldConfigsPanel extends JDialog {
 
   private void close() {
     if (myRbImport.isSelected()) {
-      String text = myPrevInstallation.getText();
-      if (StringUtil.isEmptyOrSpaces(text)) {
+      var text = myPrevInstallation.getText().trim();
+      if (text.isEmpty()) {
         showError(BootstrapBundle.message("import.chooser.error.empty", myProductName));
         return;
       }
 
-      Path selectedDir = Paths.get(FileUtil.toCanonicalPath(text.trim()));
+      var selectedDir = Path.of(text).toAbsolutePath().normalize();
 
       if (Files.isRegularFile(selectedDir)) {
-        if (!ConfigImportHelper.isValidSettingsFile(selectedDir.toFile())) {
+        if (!isValidSettingsFile(selectedDir)) {
           showError(BootstrapBundle.message("import.chooser.error.invalid", selectedDir));
           return;
         }
         myResult = new Pair<>(selectedDir, null);
       }
       else {
-        if (FileUtil.pathsEqual(selectedDir.toString(), PathManager.getHomePath()) ||
-            FileUtil.pathsEqual(selectedDir.toString(), PathManager.getConfigPath())) {
+        if (selectedDir.equals(PathManager.getHomeDir()) || selectedDir.equals(PathManager.getConfigDir())) {
           showError(BootstrapBundle.message("import.chooser.error.current", myProductName));
           return;
         }
 
-        Pair<Path, Path> result = myValidator.apply(selectedDir);
+        var result = myValidator.apply(selectedDir);
         if (result == null) {
           showError(BootstrapBundle.message("import.chooser.error.unrecognized", selectedDir, myProductName));
           return;
@@ -176,8 +175,17 @@ final class ImportOldConfigsPanel extends JDialog {
   }
 
   private void showError(@NlsContexts.DialogMessage String message) {
-    String title = BootstrapBundle.message("import.chooser.error.title");
+    var title = BootstrapBundle.message("import.chooser.error.title");
     JOptionPane.showMessageDialog(this, message, title, JOptionPane.ERROR_MESSAGE);
+  }
+
+  private static boolean isValidSettingsFile(Path file) {
+    try (@SuppressWarnings("IO_FILE_USAGE") var zip = new ZipFile(file.toFile())) {
+      return zip.getEntry(ImportSettingsFilenameFilter.SETTINGS_JAR_MARKER) != null;
+    }
+    catch (IOException ignored) {
+      return false;
+    }
   }
 
   @Nullable Pair<Path, Path> getSelectedFile() {
